# file_template_parser

./: CMakeLists.txt  LICENSE  package.xml
include/file_template_parser/: file_template_parser.h  template_container.h  template_import.h
src/: template_container.cpp  template_import.cpp  template_import_test.cpp
test/: template.xml
test/templates/: temoto_ai_cmakelists.xml
